# learning-game

./: .gitignore  LICENSE  README.md  cnp.bat  lyrics.ipynb  lyrics.txt  notes.ipynb  pyproject.toml
